# event-service

./: .gitignore  Cargo.toml  README.MD  build.rs
proto/: events.proto
resources/: config.yml
src/: app.rs  main.rs
src/grpc/: event_api.rs  mod.rs
src/kafka/: event_queue.rs  kafka_client.rs  mod.rs
tests/: docker-compose.yml
